--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'digital-7';
+  src: url(/fonts/digital-7/digital-7\ \(mono\).ttf);
+}
+
 * {
   box-sizing: border-box;
 }
@@ -8,9 +13,10 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-span{
-  font-size:45px;
+span {
+  font-size: 45px;
   margin: -2px;
+  cursor: pointer;
 }
 
 h1.title {
@@ -21,12 +27,27 @@ h1.title {
   margin-bottom: 30px;
   font-size: 4em;
   color: aliceblue;
+  animation: title 1.5s ease 0s 1 normal forwards;
+}
+
+@keyframes title {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.1);
+  }
+
+  100% {
+    transform: scale(1);
+  }
 }
 
 .timer {
   position: absolute;
   text-align: center;
-  padding: 20px;
+  padding: 15px;
   padding-left: 2px;
   margin: auto;
   left: 0;
@@ -37,29 +58,32 @@ h1.title {
   width: 200px;
   box-shadow: 5px 5px 3px 0px #000;
   border: none;
-  font-size: 30px;
+  font-size: 35px;
+  font-family: digital-7;
+  animation: fade-in-left 1s ease 0s 1 normal forwards;
 }
 
-.points {
+.flags {
   position: absolute;
-  text-align: center;
-  padding: 20px;
+  text-align: auto;
+  padding: 11px;
   margin: auto;
   left: 0;
   margin-bottom: 30px;
-  margin-top: 150px;
+  margin-top: 120px;
   background-color: gray;
   color: aliceblue;
   width: 200px;
   box-shadow: 5px 5px 3px 0px #000;
   border: none;
   font-size: 36px;
+  animation: fade-in-left 1s ease 0s 1 normal forwards;
 }
 
 .lives {
   position: absolute;
   text-align: center;
-  padding: 20px;
+  padding: 17px;
   margin: auto;
   right: 0;
   margin-bottom: 30px;
@@ -70,6 +94,31 @@ h1.title {
   box-shadow: 5px 5px 3px 0px #000;
   border: none;
   font-size: 36px;
+  animation: fade-in-right 1s ease 0s 1 normal forwards;
+}
+
+@keyframes fade-in-left {
+	0% {
+		opacity: 0;
+		transform: translateX(-50px);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateX(0);
+	}
+}
+
+@keyframes fade-in-right {
+	0% {
+		opacity: 0;
+		transform: translateX(50px);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateX(0);
+	}
 }
 
 table {
@@ -89,9 +138,6 @@ td {
   width: 35px;
   height: 35px;
   border: 1px solid grey;
-
-
-
 }
 
 td:hover {
@@ -105,6 +151,10 @@ td:hover {
 }
 
 td.clicked {
+  background-color: aliceblue;
+}
+
+td.flagged {
   background-color: aliceblue;
 }
 
@@ -143,6 +193,6 @@ footer {
   padding: 10px 10px 0px 10px;
   bottom: 5px;
   color: aliceblue;
-  
-  
+
+
 }
